[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "rust-dlx-lib"
version = "0.1.0"

description = "Exact cover solver using Dancing Links"
readme = "README.md"

requires-python = ">=3.10"

authors = [
  { name = "Erik Colban" }
]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust"
]
